--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@ h2 {
 
 .Myphoto {
     border-radius: 100PX;
-    background: url(../img/IMG_5875.jpg);
+    background: url(../img/IMG_5875.jpg),url(../img/dg.jpg);
     background-size: cover;
     margin: 2rem auto;
     height: 200px;
