--- a/css/index.css
+++ b/css/index.css
@@ -335,7 +335,59 @@ h2 {
 
 .tips {
     width: 100%;
-    height: 60vh;
+    overflow: hidden;
     background-color:#f39c12;
     background-image: url(../img/paper.png);
+}
+
+.tip{
+    font-size: 3rem;
+    text-align: center;
+    margin: 2rem;
+    color: #fff;
+    font-weight: 600;
+}
+
+.time{
+    position: relative;
+    overflow: hidden;
+    margin: 3rem auto;
+    width: 65rem;
+}
+
+.time::after{
+    position: absolute;
+    top:0;
+    left: 50%;
+    height: 100%;
+    width: 5px;
+    background-color: #fff;
+    content: "";
+}
+
+.tBox{
+    width: 100%;
+    overflow: hidden;
+}
+
+.timeBox{
+    width: 450px;
+    margin: 1rem 0;
+    padding: 1.5rem;
+}
+
+.timeBox h1,.timeBox p {
+    line-height: 1.5;
+    color: #fff;
+    font-weight: 600;
+}
+
+.timeBox h1{
+    text-align: center;
+    font-size: 2rem;
+    margin: 0.5rem;
+}
+
+.timeBox p{
+    font-size: 1.5rem;
 }
